[package]
name = "stc-s"
version = "0.1.0"
authors = ["F.-X. Pineau <francois-xavier.pineau@astro.unistra.fr>"]
description = "Rust implementation of a STC-S serializer/deserializer with JSON support."
license = "Apache-2.0 OR MIT"
readme = "README.md"
categories = ["encoding", "science"]
keywords = ["ivoa", "stc", "stc-s", "json", "astronomy"]
documentation = "https://docs.rs/stc"
homepage = "https://github.com/cds-astro/cds-stc-rust/"
repository = "https://github.com/cds-astro/cds-stc-rust/"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
nom = { version = "7.1.3", features = ["alloc"] }
serde_json = "1.0"


